--- a/index.html
+++ b/index.html
@@ -41,23 +41,25 @@
           you'll grass.
         </p>
       </section>
-      <div class="travel">Travel with me!</div>
-      <figure class="picture lake">
-        <img src="./img/lake.jpg" alt="lake" />
-        <figcaption class="picture-description">Slovenia</figcaption>
-      </figure>
-      <figure class="picture mountains">
-        <img src="./img/mountains.jpg" alt="mountains" />
-        <figcaption class="picture-description">USA</figcaption>
-      </figure>
-      <figure class="picture tree">
-        <img src="./img/tree.jpg" alt="tree" />
-        <figcaption class="picture-description">Australia</figcaption>
-      </figure>
-      <figure class="picture sea">
-        <img src="./img/sea.jpg" alt="sea" />
-        <figcaption class="picture-description">Greece</figcaption>
-      </figure>
+      <section>
+        <div class="travel">Travel with me!</div>
+        <figure class="picture lake">
+          <img src="./img/lake.jpg" alt="lake" />
+          <figcaption class="picture-description">Slovenia</figcaption>
+        </figure>
+        <figure class="picture mountains">
+          <img src="./img/mountains.jpg" alt="mountains" />
+          <figcaption class="picture-description">USA</figcaption>
+        </figure>
+        <figure class="picture tree">
+          <img src="./img/tree.jpg" alt="tree" />
+          <figcaption class="picture-description">Australia</figcaption>
+        </figure>
+        <figure class="picture sea">
+          <img src="./img/sea.jpg" alt="sea" />
+          <figcaption class="picture-description">Greece</figcaption>
+        </figure>
+      </section>
       <div class="chat">
         <img src="./img/chatbot.svg" alt="chatbot" />
       </div>
